# Activate-Linux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
build-aux/: dist-vendor.sh  gay.ash.ActivateLinux.json
data/: gay.ash.ActivateLinux.desktop
i18n/en/: activate_l.ftl
src/: main.rs
