[package]
name = "activate-l"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master", default-features = false, features = ["wayland", "tokio"] }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
os-release = "0.1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
once_cell = "1.17.1"

